# mlproject

./: .gitignore  pyproject.toml  readme.md
.ipynb_checkpoints/: titanicproject-checkpoint.ipynb
