[tool.poetry]
name = "mlproject"
version = "0.1.0"
description = "Titanic Survived"
authors = ["정찬용 <nrj6081@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
numpy = "^2.1.3"
pandas = "^2.2.3"
seaborn = "^0.13.2"
matplotlib = "^3.9.2"
sklearn = "^0.0.post12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
